--- a/Titanic_LogisiticRegression.ipynb
+++ b/Titanic_LogisiticRegression.ipynb
@@ -1355,11 +1355,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# i for i in range(0,len(train)) if train['Survived'][i]==train_predict[i] for count+i]"
+    "# Although the Accuracy has already been given by the score method as percentage"
    ]
   },
   {
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1402,6 +1402,360 @@
    "source": [
     "Accuracy=1-count/len(train)\n",
     "print(Accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#let's draw the confusion matrix "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[474,  75],\n",
+       "       [104, 238]], dtype=int64)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusionmatrix=confusion_matrix(train['Survived'],train_predict)\n",
+    "confusionmatrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's calculate the precision_score both manually and using the formula"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7603833865814696"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precisionScore=confusionmatrix[1][1]/(confusionmatrix[0][1]+confusionmatrix[1][1])\n",
+    "precisionScore "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7603833865814696"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precisionScore=precision_score(train['Survived'],train_predict)\n",
+    "precisionScore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Recall Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.695906432748538"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recallScore=confusionmatrix[1][1]/(confusionmatrix[1][0]+confusionmatrix[1][1])\n",
+    "recallScore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.695906432748538"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recallScore=recall_score(train['Survived'],train_predict)\n",
+    "recallScore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This Model is no way Good "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Earlier we have drooped passenngerid  Name and Ticket columns let's see if using these attributes will help  imrpving the model performenace \n",
+    "by using the correlation method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>PassengerId</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.005007</td>\n",
+       "      <td>-0.035144</td>\n",
+       "      <td>0.042939</td>\n",
+       "      <td>0.033207</td>\n",
+       "      <td>-0.057527</td>\n",
+       "      <td>-0.001652</td>\n",
+       "      <td>0.012658</td>\n",
+       "      <td>-0.001205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Survived</th>\n",
+       "      <td>-0.005007</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.338481</td>\n",
+       "      <td>-0.543351</td>\n",
+       "      <td>-0.069809</td>\n",
+       "      <td>-0.035322</td>\n",
+       "      <td>0.081629</td>\n",
+       "      <td>0.257307</td>\n",
+       "      <td>0.168240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pclass</th>\n",
+       "      <td>-0.035144</td>\n",
+       "      <td>-0.338481</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.131900</td>\n",
+       "      <td>-0.331339</td>\n",
+       "      <td>0.083081</td>\n",
+       "      <td>0.018443</td>\n",
+       "      <td>-0.549500</td>\n",
+       "      <td>-0.243292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sex</th>\n",
+       "      <td>0.042939</td>\n",
+       "      <td>-0.543351</td>\n",
+       "      <td>0.131900</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.084153</td>\n",
+       "      <td>-0.114631</td>\n",
+       "      <td>-0.245489</td>\n",
+       "      <td>-0.182333</td>\n",
+       "      <td>-0.082853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age</th>\n",
+       "      <td>0.033207</td>\n",
+       "      <td>-0.069809</td>\n",
+       "      <td>-0.331339</td>\n",
+       "      <td>0.084153</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.232625</td>\n",
+       "      <td>-0.179191</td>\n",
+       "      <td>0.091566</td>\n",
+       "      <td>0.032024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SibSp</th>\n",
+       "      <td>-0.057527</td>\n",
+       "      <td>-0.035322</td>\n",
+       "      <td>0.083081</td>\n",
+       "      <td>-0.114631</td>\n",
+       "      <td>-0.232625</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.414838</td>\n",
+       "      <td>0.159651</td>\n",
+       "      <td>-0.059528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Parch</th>\n",
+       "      <td>-0.001652</td>\n",
+       "      <td>0.081629</td>\n",
+       "      <td>0.018443</td>\n",
+       "      <td>-0.245489</td>\n",
+       "      <td>-0.179191</td>\n",
+       "      <td>0.414838</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.216225</td>\n",
+       "      <td>-0.011069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fare</th>\n",
+       "      <td>0.012658</td>\n",
+       "      <td>0.257307</td>\n",
+       "      <td>-0.549500</td>\n",
+       "      <td>-0.182333</td>\n",
+       "      <td>0.091566</td>\n",
+       "      <td>0.159651</td>\n",
+       "      <td>0.216225</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.269335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Embarked</th>\n",
+       "      <td>-0.001205</td>\n",
+       "      <td>0.168240</td>\n",
+       "      <td>-0.243292</td>\n",
+       "      <td>-0.082853</td>\n",
+       "      <td>0.032024</td>\n",
+       "      <td>-0.059528</td>\n",
+       "      <td>-0.011069</td>\n",
+       "      <td>0.269335</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             PassengerId  Survived    Pclass       Sex       Age     SibSp  \\\n",
+       "PassengerId     1.000000 -0.005007 -0.035144  0.042939  0.033207 -0.057527   \n",
+       "Survived       -0.005007  1.000000 -0.338481 -0.543351 -0.069809 -0.035322   \n",
+       "Pclass         -0.035144 -0.338481  1.000000  0.131900 -0.331339  0.083081   \n",
+       "Sex             0.042939 -0.543351  0.131900  1.000000  0.084153 -0.114631   \n",
+       "Age             0.033207 -0.069809 -0.331339  0.084153  1.000000 -0.232625   \n",
+       "SibSp          -0.057527 -0.035322  0.083081 -0.114631 -0.232625  1.000000   \n",
+       "Parch          -0.001652  0.081629  0.018443 -0.245489 -0.179191  0.414838   \n",
+       "Fare            0.012658  0.257307 -0.549500 -0.182333  0.091566  0.159651   \n",
+       "Embarked       -0.001205  0.168240 -0.243292 -0.082853  0.032024 -0.059528   \n",
+       "\n",
+       "                Parch      Fare  Embarked  \n",
+       "PassengerId -0.001652  0.012658 -0.001205  \n",
+       "Survived     0.081629  0.257307  0.168240  \n",
+       "Pclass       0.018443 -0.549500 -0.243292  \n",
+       "Sex         -0.245489 -0.182333 -0.082853  \n",
+       "Age         -0.179191  0.091566  0.032024  \n",
+       "SibSp        0.414838  0.159651 -0.059528  \n",
+       "Parch        1.000000  0.216225 -0.011069  \n",
+       "Fare         0.216225  1.000000  0.269335  \n",
+       "Embarked    -0.011069  0.269335  1.000000  "
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.corr() #it will plot the numeric values only"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here passengerid is hardly showing any impact on the on the predicted vlaue "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Submit the prediction from this model into kaggle and then we will continue it for decison tree and randomforest classifer also"
    ]
   },
   {
